kube-web-view/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    application: kube-web-view
  name: kube-web-view
spec:
  replicas: 1
  selector:
    matchLabels:
      application: kube-web-view
  template:
    metadata:
      labels:
        application: kube-web-view
      annotations:
        podinfo: "kubectlによる情報をWebで表示するソフト"
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                - key: kubernetes.io/os
                  operator: In
                  values:
                    - linux
                - key: kubernetes.io/arch
                  operator: In
                  values:
                    - arm64
      serviceAccountName: kube-web-view
      containers:
      - name: kube-web-view
        # see https://codeberg.org/hjacobs/kube-web-view/releases
        image: hjacobs/kube-web-view:22.11.0
        args:
        - --port=8080
        # uncomment the following line to enable pod logs
        # (disabled by default as they might consider sensitive information)
        # - "--show-container-logs"
        # uncomment the following line to unhide secret data
        # see also https://kube-web-view.readthedocs.io/en/latest/security.html
        # - "--show-secrets"
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
        resources:
          limits:
            memory: 100Mi
          requests:
            cpu: 5m
            memory: 100Mi
        securityContext:
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 1000
